@@ -12,6 +12,10 @@ dependencies {
     testImplementation(libs.test.mockito)
 }
 
+tasks.withType<Test>().configureEach {
+    jvmArgs("-Dnet.bytebuddy.experimental=true")
+}
+
 tasks.withType<KotlinCompile>().all {
     compilerOptions {
             jvmTarget.set(JvmTarget.JVM_1_8)
